sort.basic.shell.AlgShellSort.scala.error
Compilation error:
AlgShellSort:9: error: ';' expected but ')' found.
        copie(i-n*ecart,i-(n-1)*écart))
                                      ^